# cs3081-final-exam

./: .coverage  coverage.xml  pyproject.toml
.scannerwork/: report-task.txt
app/: main.py
app/adapters/: cli.py
app/application/use_cases/: calculate_grade.py
app/domain/entities/: evaluation.py  student.py
app/domain/entities/policies/: attendance_policy.py  extra_points_policy.py
app/domain/services/: grade_calculator.py
tests/: test_grade_calculator.py
